--- a/template/views/about.hbs
+++ b/template/views/about.hbs
@@ -10,7 +10,8 @@
                 {{>header}} 
             <h1>For Sale</h1>
             <img class="potrait" src="/image/combine.jpeg">
-            <img class="Riya" src="/image/robot.jpg">
+            <img class="lala" src="/image/lala.jpeg">
+            <img class="shoury" src="/image/shoury.jpeg">
             </div>
             
             
