--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -48,9 +48,15 @@ header a{
     
 }
 
-.Riya{
+.lala{
     width: 250px;
     margin-left: 3cm;
+}
+
+.shoury{
+    widht : 200px;
+    margin-left : 5cm;
+    
 }
 
 input{
