--- a/template/views/help.hbs
+++ b/template/views/help.hbs
@@ -4,7 +4,7 @@
     <head>
         <title>Help</title>
         <link rel="icon" href="/image/help.png">
-        <link rel="StyleSheet" href="/css/styles.css">
+        <link rel="StyleSheet" href="/css/help-style.css">
         <body>
             <div class="main-content">
                  {{>header}}
