--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,17 +1,31 @@
 body{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: #333333;
+    color: #cccccc;
+    background-image: url('https://i.pinimg.com/originals/79/a3/84/79a384c3c449ad01b0e57e790807b2c0.gif');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 70%;
+    min-height: 100vh;
+    width: 100%;
+    background-color: black;
+    
+  
     max-width: 10000px;
     max-width: 10000px;
     margin: 0 auto;
     padding: 0 16px;
-    background-color: #E5E4E2;
+    
 
     display: flex;
     flex-direction: column;
     min-height: 100vh
+    
 
 }
+
+
+
+
 
 .main-content{
     flex-grow: 1;
@@ -19,18 +33,22 @@ body{
 }
 
 footer{
-    color:#888888;
+    color:blanchedalmond;
+    
     border-top: 1px solid #eeeeee;
+    border: none;
     margin-top: 16px;
     padding: 16px 0 ;
 }
 
 header{
+    color: #cccccc;
     margin-top: 16px;
     margin-bottom: 50px;
 }
 
 h1{
+    
     font-size: 64px;
     margin-bottom: 16px;
 }
@@ -57,6 +75,7 @@ header a{
     width: 200px;
     margin-left : 4cm;
     
+    
 }
 
 input{
@@ -70,4 +89,12 @@ button{
     padding: 8px;
     background: #888888;
     color: white;
+    
 }
+
+button:hover{
+    background-color: red;
+    border: 2px solid green;
+    color: white;
+}
+
