--- a/template/views/about.hbs
+++ b/template/views/about.hbs
@@ -8,10 +8,12 @@
         <body>
             <div class="main-content">
                 {{>header}} 
-            <h1>For Sale</h1>
-            <img class="potrait" src="/image/combine.jpeg">
-            <img class="lala" src="/image/lala.jpeg">
-            <img class="shoury" src="/image/shoury.jpeg">
+                <h1>For Sale</h1>
+                 <p>This People Are Here For Sale!!</p>
+                <img class="potrait" src="/image/combine.jpeg">
+                <img class="lala" src="/image/lala.jpeg">
+                <img class="shoury" src="/image/shoury.jpeg">
+                
             </div>
             
             
@@ -19,5 +21,9 @@
             
             
         </body>
+
+        
+            
+        
     </head>
 </html>
