--- a/template/views/about.hbs
+++ b/template/views/about.hbs
@@ -4,15 +4,14 @@
     <head>
         <title>About</title>
         <link rel="icon" href="/image/cloud.jpg">
-        <link rel="StyleSheet" href="/css/styles.css">
+        <link rel="StyleSheet" href="/css/about-style.css">
         <body>
             <div class="main-content">
                 {{>header}} 
-                <h1>For Sale</h1>
-                 <p>This People Are Here For Sale!!</p>
-                <img class="potrait" src="/image/combine.jpeg">
-                <img class="lala" src="/image/lala.jpeg">
-                <img class="shoury" src="/image/shoury.jpeg">
+                <h1>Party At 11PM!!</h1>
+                 <p>You Are Here!!</p>
+                 <p>Lets Partyyy!!!</p>
+                
                 
             </div>
             
