--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,8 +1,9 @@
 body{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: #cccccc;
-    background-image: url('https://i.pinimg.com/originals/79/a3/84/79a384c3c449ad01b0e57e790807b2c0.gif');
+    background-image: url('https://c.tenor.com/jPYNf2GLrB8AAAAd/earth-earthday.gif');
     background-position: center;
+    
     background-repeat: no-repeat;
     background-size: 70%;
     min-height: 100vh;
