--- a/template/views/help.hbs
+++ b/template/views/help.hbs
@@ -3,15 +3,19 @@
 <html>
     <head>
         <title>Help</title>
+        
         <link rel="icon" href="/image/help.png">
         <link rel="StyleSheet" href="/css/help-style.css">
         <body>
             <div class="main-content">
-                 {{>header}}
-
+                 {{>header}} 
+               
                 <h1>HELP ME</h1>
                  <p> {{HelpText}}</p>
+                 
+                 <p class="dodo">If You Want More Help Click On {{>moreheader}}</p>
             </div>
+           
            
                 {{>footer}}
              
