--- a/template/views/index.hbs
+++ b/template/views/index.hbs
@@ -24,7 +24,7 @@
             <input placeholder="Location">
             <button>Search</button>
             <p id="message-1"></p>
-            <p id="message-2"></p>
+            <p class="MTwo" id="message-2"></p>
         </form>
 
     </div>
