--- a/template/views/help.hbs
+++ b/template/views/help.hbs
@@ -13,7 +13,7 @@
                 <h1>HELP ME</h1>
                  <p> {{HelpText}}</p>
                  
-                 <p class="dodo">If You Want More Help Click On {{>moreheader}}</p>
+                 <a href="/help/more">More</a>
             </div>
            
            
