--- a/template/views/more.hbs
+++ b/template/views/more.hbs
@@ -10,7 +10,7 @@
 
                 <h1>I need More help</h1>
                 <p>
-                    Will You Help??
+                    Will You Help??Are Bolo BHai
                 </p>
             </div>
         </body>
